# AILEE-Protocol-Core-For-Bitcoin

./: .dockerignore  .env.example  .gitignore  AILEE_IntegrationDemo.cpp  API_QUICKSTART.md  ARCHITECTURE.md  AUDIT_REPORT.md  AmbientAI-Core.cpp  AmbientAI-Core.h  AmbientAI.cpp  AmbientAI.h  AvalancheAdapter.cpp  BitcoinAdapter.cpp  BitcoinRPCClient.h  BitcoinZMQListener.h  CHANGELOG.md  CITATION.cff  CLONE_IMPACT.md  CMakeLists.txt  CONTRIBUTING.md  Config.h  DEPLOYMENT_FIXES.md  Dockerfile  Dockerfile.node  EvmBaseAdapter.cpp  FederationWalletGenerator.h  Global_Seven.h  L1_TO_L2_Infrastructure.md  Ledger.cpp  Orchestrator.cpp  Orchestrator.h  OrchestratorDemo.cpp  PRODUCTION_READINESS_ANALYSIS.md  PolygonAdapter.cpp  README.md  RECOVERY_GUIDE.md  SAFETY_AND_SUSTAINABILITY.md  SECURITY.md  SECURITY_AND_POWER.md  SolanaAdapter.cpp  (+36 more)
.github/workflows/: ci.yml
M tests/l6/: test_zk_orchestration_integration.cpp
_codeql_build_dir/: ailee_node
api/: __init__.py  auth.py  bitcoin_rpc_failover.py  config.py  database.py  l2_client.py  main.py  security_audit.py
api/routers/: __init__.py  health.py  l2.py  metrics.py  status.py  transactions.py  trust.py
archive/: fix_impls5.sh  patch_federation.sh
build_write_enabled/: CTestTestfile.cmake  ailee_l2_verify  ailee_node  ailee_tests  reorg_detector_tests
cmake/: FindLibp2p.cmake
config/: ailee.toml  config.yaml  config_hot_reload.h  config_loader.h  config_types.h  prometheus.yml  secrets.example.yaml
data/reorg_db/: IDENTITY  LOG.old.1783290326431322  LOG.old.1783290326454523  MANIFEST-000015
docs/: ADAPTERS.md  AMBIENT_VCP_INTEGRATION.md  ARCHITECTURE_CONCEPTUAL.md  Adapters.md  BACKUP_RECOVERY.md  BUILD.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_REAL_L2.md  IMPLEMENTATION_SUMMARY.md  KEY_MANAGEMENT.md  L1_TO_L2_Infrastructure.md  L2_PROTOCOL_SPECIFICATION.md  LIBP2P_INTEGRATION.md  MEMPOOL_INTEGRATION.md  MISSION_ACCOMPLISHED.md  NEW_REPO_PROMPT.md  NEXT_PHASE_FEATURES.md  NODE_CRASH_RECOVERY.md  PACKAGE_METADATA.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS.md  PRODUCTION_ROADMAP.md  RELEASE.md  SECURITY.md  TECHNICAL_APPENDIX.md  TLS_SSL_SETUP.md  TRANSACTION_API.md  VERIFICATION.md  VISION.md  WEB_IMPLEMENTATION_SUMMARY.md  WEB_INTEGRATION.md  verification.md  wave_epoch_and_phase_state_machine.md  wave_identity_and_phase_binding.md  wave_native_routing_layer.md  wave_phase_propagation.md  wave_resonance_profiles.md
docs/architecture/: ambient_participation_proofs.md
docs/whitepapers/: AMBIENT_AI.md  VCP.md
econ/: ILedger.h
examples/: AILEE_IntegrationDemo.cpp  AmbientVCP_Demo.cpp  AmbientVCP_Production_Demo.cpp  P2PNetworkDemo.cpp  README.md  WebServerDemo.cpp  governanrce_demo.cpp  transaction_example.py
include/: AILEEWebServer.h  AILEE_NetFlow.h  AmbientAI-Core.h  AmbientAI.h  AmbientClient.h  AmbientNode.h  BlockProducer.h  FederatedLearning.h  Global_Seven.h  L1Reflection.h  L2State.h  Ledger.h  Mempool.h  Orchestrator.h  ProverRegistry.h  ProverSwarm.h  ReorgDetector.h  SwarmConfig.h  SwarmConfigLoader.h  SwarmRuntime.h  ailee_dao_governance.h  ailee_netflow.h  ailee_rust_ffi.h  ambient_ai_consensus_ordering_rules.hpp  config_hot_reload.h  config_loader.h  config_types.h  crypto_utils.h  expr.h  httplib.h  policies.h  zk_proofs.h
include/l1_sync/: replay_input.hpp  sync_events.hpp
include/l2/: DeterministicEngine.h  ExecutionEnvelope.cpp  ExecutionEnvelope.h
include/l3/: GossipLayer.h  NetworkBinding.h  NetworkDriver.h  NetworkReflection.h  PeerSync.h
include/l4/: ClusterTypes.h  DeterministicDashboard.h  DeterministicScheduler.h  RecoveryCoordinator.h  ReplayBuffer.h  ReplayEngine.h
include/l6/: FederationExport.h  IslaRuntimeOrchestrator.h  ReplayExport.h  RuntimeEnvironment.h  ZKStubInterface.h
include/util/: Hex.h
presets/: cloner_readme.md  governor_rules.json  handshake_domain.json  rpc_defaults.json  sandbox_defaults.json
protocol/broadcasts/: v33_activation.json
recovery/: srcailee_recovery_protocol.h
scripts/: check-metadata.sh  deploy-multinode.sh  install-libp2p.sh  railway_post_deploy.sh  test-integration.py  test-p2p-integration.sh
scripts/security/: generate-dev-certs.sh  install-git-hooks.sh  setup-commercial-ca.sh  setup-letsencrypt.sh
src/: AILEEWebServer.cpp  AILEE_NetFlow.cpp  AmbientAI-Core.cpp  AmbientAI.cpp  NodeIdentity.cpp  ailee_rpc_client.cpp  config_hot_reload.cpp  config_loader.cpp  expr.cpp  main.cpp  metrics.cpp  policies.cpp
src/ambient_mesh/: ambient_ai_mesh_neighborhood.cpp  ambient_ai_mesh_protocol.cpp  ambient_ai_mesh_routing_engine.cpp
src/ambient_node/: ambient_ai_routing_engine.cpp  ambient_ai_sensing_engine.cpp
src/anchoring/: ambient_ai_taproot_anchor.cpp
src/broadcast/: BroadcastEngine.cpp  BroadcastEngine.hpp
src/consensus/: ambient_ai_consensus_ordering_rules.cpp  ambient_ai_consensus_state_machine.cpp  ambient_ai_l2_merkleization.cpp
src/core/: Ledger.cpp  Logging.h
src/energy/: ambient_ai_energy_model.cpp
src/governor/: GovernorEngine.cpp  GovernorEngine.h  PolicyRules.cpp  PolicyRules.h  TransferValidator.cpp  TransferValidator.h
src/identity/: ambient_ai_node_identity.cpp  ambient_ai_participation.cpp
src/integration/: ailee_service.cpp
src/json/: JsonLoader.cpp  JsonLoader.hpp
src/l1/: AILEEEnergyAdapter.cpp  AILEEEnergyAdapter.h  AILEEMempoolAdapter.cpp  AILEEMempoolAdapter.h  AILEENetworkAdapter.cpp  AILEENetworkAdapter.h  AdapterRegistry.cpp  AnchorCommitment.cpp  AvalancheAdapter.cpp  BitcoinAdapter.cpp  BitcoinAdapter.h  BitcoinZMQListener.h  CardanoAdapter.cpp  CardanoAdapter.h  DogecoinAdapter.cpp  (+13 more)
swarm_db/: IDENTITY  LOG.old.1783290326344448  LOG.old.1783290326382651  MANIFEST-000017
tests/: AdapterRegistryTests.cpp  DeterministicEngineTests.cpp  MeshCoherenceTests.cpp  NetworkIntegrationTests.cpp  ReflectionLayerTests.cpp  ReorgDetectorTests.cpp  conftest.py  test_anchor_commit_signing.cpp  test_health.py  test_isla_semantics.cpp  test_mempool_integration.py  test_transactions.py
tools/: genesis_extractor.cpp
web/: README.md  dashboard.js  index.html  styles.css
(+107 files in other folders)
